// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper clearButton"
>
  <button
    className="container uui-button-box uui-enabled -clickable root size-36 uui-no-left-icon uui-no-right-icon uui-theme-promo"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      CLOSE ALL NOTIFICATIONS
    </div>
  </button>
</div>
`;

exports[`ErrorNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root uui-theme-promo icon-button-color-gray60 closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`HintNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-blue root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root uui-theme-promo icon-button-color-gray60 closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root uui-theme-promo icon-button-color-gray60 closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 2`] = `
<div
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root uui-theme-promo icon-button-color-gray60 closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`SuccessNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-green root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root uui-theme-promo icon-button-color-gray60 closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`WarningNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-amber root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <div
      className="closeWrapper"
    >
      <button
        className="container uui-button-box uui-enabled -clickable icon-button-gray60 root uui-theme-promo icon-button-color-gray60 closeIcon"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
